# sochdb

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  azure-pipelines.yml  deny.toml  unsafe_census.sh  update_version.py  validate-examples.sh
.azurepipelines/: azure-pipelines-ci.yml
Issues/: 001_vector_search_result_distance_opaque.md  002_distance_metric_opacity_full_context.md
architectural-observations/: sochdb-architecture-observations.md
benchmarks/: competitive_benchmark.py  (+2 more)
deploy/operator/: Cargo.toml
deploy/operator/src/: crd.rs  lib.rs  reconciler.rs
examples/rust/: 01_basic_database.rs  02_transactions.rs  03_vector_search.rs  04_sql_queries.rs  Cargo.toml
sochdb-bench/: BENCHMARK_RESULTS.md  Cargo.toml  H2O_BENCHMARK_RESULTS.md  README.md  be-surel.md  pg_wire_e2e_client.py
sochdb-bench/benches/: micro.rs
sochdb-bench/h2o-bench/: h2o_bench.py  h2o_datagen.py  h2o_results.json
sochdb-bench/src/: h2o_main.rs  lib.rs  main.rs  membench_retriever_main.rs  memory_bench_main.rs  report.rs  workloads.rs
sochdb-bench/src/adapters/: duckdb_adapter.rs  lancedb_adapter.rs  mod.rs  sochdb_adapter.rs  sqlite_adapter.rs
sochdb-bench/src/memory_bench/: beam.rs  locomo.rs  longmemeval.rs  mod.rs  scoring.rs
sochdb-grpc/: Cargo.toml  README.md  build.rs
sochdb-grpc/proto/: sochdb.proto
sochdb-grpc/src/: auth_interceptor.rs  blocking_pool.rs  checkpoint_server.rs  collection_server.rs  context_server.rs  error.rs  graph_server.rs  health_service.rs  kv_server.rs  lib.rs  main.rs  mcp_server.rs  memory_backend.rs  metrics_server.rs  namespace_server.rs  observability.rs  pg_wire.rs  policy_server.rs  security.rs  semantic_cache_server.rs  server.rs  subscription_server.rs  trace_server.rs  ws_server.rs
sochdb-grpc/tests/: context_memory_integration.rs
sochdb-memory/: Cargo.toml
sochdb-memory/src/: embedding.rs  enrichment.rs  episode.rs  fact.rs  lib.rs  lifecycle.rs  provenance.rs  query.rs  store.rs  tests.rs
sochdb-plugin-logging/: Cargo.toml
sochdb-plugin-logging/src/: lib.rs
sochdb-python/: Cargo.toml  README.md  pyproject.toml
sochdb-python/python/sochdb/: __init__.py  _bulk.py  hybrid.py
sochdb-python/src/: hybrid3.rs  lib.rs
sochdb-python/tests/: test_grpc_response_models.py  test_hybrid_search.py  test_multishard_search.py  test_reproducible_build.py
sochdb-query/: Cargo.toml  README.md
sochdb-query/examples/: agent_memory_qa_context_select.rs
sochdb-query/src/: bm25_filtered.rs  candidate_gate.rs  capability_token.rs  context_compiler.rs  context_query.rs  cost_optimizer.rs  embedding_provider.rs  exact_token_counter.rs  filter_ir.rs  filtered_vector_search.rs  grep_executor.rs  hybrid_retrieval.rs  lib.rs  like.rs  memory_compaction.rs  metadata_index.rs  namespace.rs  optimizer_integration.rs  plugin_table.rs  query_optimizer.rs  semantic_triggers.rs  simd_filter.rs  soch_ql_executor.rs  storage_bridge.rs  streaming_context.rs  temporal_decay.rs  token_budget.rs  topk_executor.rs  trigram_index.rs  unified_fusion.rs
sochdb-query/src/executor/: aggregate.rs  eval.rs  explain.rs  filter.rs  join.rs  limit.rs  mod.rs  node.rs  pipeline.rs  planner.rs  project.rs  scan.rs  sort.rs  tests.rs  types.rs
sochdb-query/src/sql/: aggregate.rs  ast.rs  bridge.rs  compatibility.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
sochdb-sdk/python/: pyproject.toml
sochdb-sdk/python/sochdb_sdk/: __init__.py  client.py
sochdb-simulation/: Cargo.toml
sochdb-simulation/expected/: distributed_grpc.json  release_gates.json  retrieval_quality.json  slos.json  standalone_10k.json
sochdb-simulation/src/: calibration.rs  component.rs  engine.rs  expected.rs  lib.rs  main.rs  report.rs  scenario.rs  score.rs  topology.rs
sochdb-simulation/src/release/: gate.rs  mod.rs  report.rs  validator.rs
sochdb-storage/: Cargo.toml  README.md
sochdb-storage/benches/: bench_compaction.rs  bench_comparison.rs  bench_concurrency.rs  bench_memory.rs  bench_point_read.rs  bench_recovery.rs  bench_scan.rs  bench_space_amp.rs  bench_write_amp.rs  bench_ycsb.rs  measurement_harness.rs
sochdb-storage/src/: actor.rs  adaptive_memtable.rs  admission_control.rs  backend.rs  backup.rs  cdc.rs  checkpoint.rs  clr_learned_index.rs  columnar_wal.rs  compaction_policy.rs  compression.rs  concurrent_art.rs  correctness_testing.rs  cow_btree.rs  database.rs  deferred_index.rs  dirty_tracking.rs  durability_contract.rs  durable_storage.rs  encryption.rs  epoch_arena.rs  epoch_mvcc.rs  ffi.rs  generational_slab.rs  hierarchical_ts.rs  hlc.rs  hybrid_store.rs  index_policy.rs  io_isolation.rs  io_uring.rs  io_uring_wal.rs  ipc.rs  ipc_server.rs  keyring.rs  lazy_namespace.rs  learned_index_integration.rs  lib.rs  lock.rs  lockfree_epoch.rs  lockfree_memtable.rs  (+35 more)
sochdb-storage/src/payload/: disk_hash_index.rs  mod.rs
sochdb-storage/src/sstable/: block.rs  builder.rs  filter.rs  format.rs  mod.rs  table.rs
sochdb-storage/tests/: crash_tests.rs  loom_concurrency.rs
sochdb-vector/: Cargo.toml  build.rs
sochdb-vector/benches/: simd_kernels.rs
sochdb-vector/src/: async_lsm.rs  async_rotation.rs  batch_segment_writer.rs  bm25.rs  bmi2_paths.rs  compaction.rs  compressed_routing.rs  config.rs  cost_model.rs  dispatch.rs  filter.rs  filter_indexing.rs  filter_pushdown.rs  guarantee_ladder.rs  hot_path_layout.rs  hybrid.rs  inverted_index.rs  jit_ir.rs  lazy_segment.rs  lib.rs  list_bounds.rs  lsm.rs  multi_vector.rs  numa_alloc.rs  outlier_encoding.rs  portable_simd.rs  quantization_calibration.rs  query_telemetry.rs  rerank.rs  rotation.rs  search_plan.rs  segment_compaction.rs  shard_topology.rs  simd_hadamard.rs  ssd_rerank.rs  tombstones.rs  types.rs  wasm_rerank.rs
sochdb-vector/src/catalog/: sochdb_catalog.rs
sochdb-vector/src/query/: controller.rs  engine.rs  mod.rs
sochdb-vector/src/segment/: bps.rs  format.rs  mod.rs  rdf.rs  reader.rs  rerank.rs  writer.rs
sochdb-vector/src/simd/: bps_scan.rs  dispatch.rs  dot_i8.rs  mod.rs  portable.rs  visibility.rs
sochdb-vector/tests/: simd_equivalence.rs
(+451 files in other folders)
