[workspace]
members = [
    "sochdb-core",
    "sochdb-kernel",
    "sochdb-plugin-logging",
    "sochdb-storage",
    "sochdb-index",
    "sochdb-query",
    "sochdb-fusion",
    "sochdb-client",
    "sochdb-mcp",
    "sochdb-grpc",
    "sochdb-wasm",
    "sochdb-vector",
    "sochdb-tools",
    "sochdb-simulation",
    "sochdb-memory",
    "sochdb-bench",
    "examples/rust",
]
# sochdb-python is excluded from workspace - it must be built with maturin
# Use: cd sochdb-python && maturin develop --release
exclude = ["sochdb-python"]
resolver = "2"

# =============================================================================
# WORKSPACE FEATURE FLAGS — Central Registry
# =============================================================================
#
# Cargo doesn't support [workspace.features]. This comment serves as the
# canonical registry. All feature additions MUST be documented here.
#
# ┌─────────────────┬──────────┬─────────┬─────────┬────────┬────────┬────────┐
# │ Feature         │ core     │ storage │ kernel  │ client │ vector │ index  │
# ├─────────────────┼──────────┼─────────┼─────────┼────────┼────────┼────────┤
# │ simd            │          │         │         │ ✓      │ ✓      │        │
# │ async (tokio)   │          │ ✓       │         │        │        │ ✓      │
# │ embedded-sync   │          │ ✓       │         │ ✓      │        │        │
# │ jemalloc        │ ✓        │         │         │        │        │        │
# │ analytics       │ ✓        │         │         │        │        │        │
# │ dynamic-plugins │          │         │ ✓       │        │        │        │
# │ wasm-plugins    │          │         │ ✓       │        │        │        │
# │ local-embed     │          │         │         │        │        │ ✓      │
# │ fastembed       │          │         │         │        │        │ ✓      │
# │ ffi             │          │ ✓       │         │        │        │        │
# └─────────────────┴──────────┴─────────┴─────────┴────────┴────────┴────────┘
#
# v0.5.0 hygiene fixes applied:
#   - sochdb-vector: "simd-kernels" consolidated → "simd" (deprecated alias kept)
#   - sochdb-index: "async" feature added as tokio opt-in gate
#   - sochdb-index: async-trait made optional behind llm-embeddings
#
# RULES:
# 1. Same concept → same feature name across crates (e.g., "simd" not "simd-kernels")
# 2. Tokio must always be opt-in via "async" feature
# 3. No default features should pull in large optional deps
# 4. Feature names must be kebab-case
# =============================================================================

[workspace.package]
version = "2.0.6"
edition = "2024"
authors = ["Sushanth <sushanth@sochdb.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sochdb/sochdb"
homepage = "https://sochdb.dev"
documentation = "https://sochdb.dev"
keywords = ["database", "llm", "ai", "vector-search", "embedded"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.85"

[workspace.dependencies]
# =============================================================================
# RUNTIME DESIGN DECISION: Storage Layer is Sync-First
# =============================================================================
#
# The core storage engine (sochdb-storage) uses synchronous I/O:
# - std::fs for file operations
# - std::thread for background workers (GC, compaction)
# - parking_lot for synchronization
#
# This design choice mirrors SQLite's approach and provides:
# - Simpler embedded integration (no runtime to initialize)
# - Predictable latency (no executor scheduling jitter)
# - Smaller binary size (~500KB less without tokio runtime)
#
# Tokio is OPTIONAL and only needed for:
# - Server mode (sochdb-mcp, sochdb-server)
# - Async client libraries
#
# Crates should declare tokio as optional dependency when needed:
# ```
# [dependencies]
# tokio = { workspace = true, optional = true }
#
# [features]
# async = ["tokio"]
# ```
#
# =============================================================================

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Compression
lz4 = "1.24"
zstd = "0.13"

# NOTE: Tokio is NOT a workspace dependency to allow true optional usage
# Crates that need async runtime should declare tokio directly with optional = true
# Example:
#   [dependencies]
#   tokio = { version = "1.35", features = ["sync", "rt"], optional = true }
#   
#   [features]
#   async = ["tokio"]
#
# This ensures the core storage/kernel crates remain async-free unless explicitly enabled.

# Data structures
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hashing
twox-hash = "1.6"
seahash = "4.1"
blake3 = "1.5"
hex = "0.4"

# Cryptography
ring = "0.17"
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "9.3"
argon2 = "0.5"

# Math and vectors
# NOTE: nalgebra was removed - unused (ndarray is used for vector ops)
ndarray = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (lightweight, no OpenTelemetry)
tracing = "0.1"

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

# Utilities
byteorder = "1.5"
memmap2 = "0.9"
dashmap = "5.5"
num_cpus = "1.16"
rand = "0.8"
moka = { version = "0.12", features = ["sync"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# `unwind` (not `abort`) so the FFI panic firewall is actually active in release:
# under `abort`, `catch_unwind` is a no-op and any panic kills the host process.
# This is sound ONLY because every `extern "C"` boundary (sochdb-storage/src/ffi.rs
# and sochdb-index ffi.rs/arrow_ipc.rs/profiling.rs) wraps its body in `ffi_guard!`,
# so no panic can unwind into a foreign frame. Do NOT revert to `abort` without
# accepting that bad FFI input will abort the host instead of returning an error.
panic = "unwind"

[profile.bench]
inherits = "release"

# Optimize dev builds for vector operations (HNSW, SIMD, etc.)
# Without this, debug tests for 10K vectors take 3+ minutes instead of 3 seconds
[profile.dev]
opt-level = 1  # Basic optimization for reasonable test speed

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 3

# Test profile with optimizations for compute-heavy HNSW tests
[profile.test]
opt-level = 2  # Good balance between speed and debug info
debug = true   # Keep debug symbols for stack traces
