[package]
name = "sochdb-plugin-logging"
version.workspace = true
edition = "2024"
description = "JSON structured logging plugin for SochDB"
license.workspace = true

[dependencies]
sochdb-kernel = { version = "2.0.6", path = "../sochdb-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
