[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sochdb"
version = "2.0.10"
description = "SochDB - AI-native database with zero-copy vector search via PyO3"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Sushanth", email = "sushanth@sochdb.dev"}
]
maintainers = [
    {name = "Sushanth", email = "sushanth@sochdb.dev"}
]
keywords = [
    "database", "llm", "ai", "vector-search", "embedded", 
    "hnsw", "ann", "nearest-neighbor", "sochdb"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.4",
]

[project.urls]
Homepage = "https://github.com/sochdb/sochdb"
Repository = "https://github.com/sochdb/sochdb"
Documentation = "https://github.com/sochdb/sochdb/tree/main/sochdb-python"
"Bug Tracker" = "https://github.com/sochdb/sochdb/issues"

# =============================================================================
# Maturin Configuration
# =============================================================================
# 
# Maturin builds native Python extensions from Rust code.
# This replaces the previous cibuildwheel + subprocess architecture.
#
# Key benefits:
# - Single pip install (no external binaries to find)
# - Zero-copy NumPy integration via PyO3
# - ABI3 for maximum wheel compatibility
# - ~10x faster than subprocess approach
# =============================================================================

[tool.maturin]
# Build settings
features = ["abi3"]
python-source = "python"
module-name = "sochdb._native"

# Keep local `maturin develop --release` working consistently across environments.
# Wheel size optimization can still be handled in release packaging workflows.
strip = false

# Compatibility settings
# ABI3 means one wheel works for Python 3.9+
compatibility = "manylinux2014"

# Include additional files in wheel
include = [
    "README.md",
    "LICENSE",
]

# Exclude development files
exclude = [
    "tests/**",
    "benches/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# Benchmark settings
[tool.pytest.benchmark]
min_rounds = 5
warmup = true
