[package]
name = "sochdb-simulation"
version = "0.1.0"
edition = "2021"
publish = false
description = "SochDB simulation environment — standalone & distributed topology modeling with expected score validation"

[[bin]]
name = "sochdb-sim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3.10"