[package]
name = "sochdb-operator"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SochDB Kubernetes operator — CRD-based lifecycle management"

[features]
default = []
k8s = ["kube", "k8s-openapi", "schemars", "serde", "serde_json"]

[dependencies]
thiserror = "2"
tracing = "0.1"
kube = { version = "0.98", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
